--- a/Reinforcement learning.ipynb
+++ b/Reinforcement learning.ipynb
@@ -2372,7 +2372,7 @@
    "source": [
     "In the given gridworld environment, where only up, down, left, and right actions are possible, an agent can reach from a starting position $s(x, y)$ to the reward position $r(i,j)$ following different paths, but the optimal number of steps needed from $s(x,y)$ to $r(i,j)$ will be the same for any optimal policy. As shown in the following figure, the agent can reach from $s(0,0)$ to $r(2,2)$ following either the green or the red arrow cells. But for any optimal policy the number of steps needed to reach from $s(0,0)$ to $r(2,2)$ will be the same, and it is $4$ in this case.\n",
     "\n",
-    "<img src = \"same_step.png\">\n",
+    "![]({{site.baseurl}}/assets/images/same_step.png)\n",
     "\n",
     "For the optimal policy, the number of steps needed in our given gridworld enivornment to reach from a state $s(x,y)$ to reward $r(i,j)$ is $|i-x|+|j-y|$. The expected average number of steps needed for the optimal policy:\n",
     "\n",
